sumo/tests/duarouter/errors/default_departspeed_false/errors.duarouter
Error: Invalid departspeed definition;
 must be one of ("random", "max", or a float>0)
Quitting (on error).
